--- a/index.html
+++ b/index.html
@@ -1,14 +1,53 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="utf-8" />
-    <title>djnaumov (alpha)</title>
-</head>
-<body>
-    <section>
-        <h1>The website is under construction...</h1>
-    </section>
 
+<head>
+    <meta charset="utf-8"/>
+    <title>djnaumov (alpha)</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
+          integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <link href="./public/main.css" type="text/css" rel="stylesheet"/>
+</head>
+
+<body>
+
+
+<div class="container">
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                <div class="wrapper">
+                    <div class="loader">
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <dic class="text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                <p class="h1">The website is under construction...</p>
+            </dic>
+        </div>
+    </div>
+
+    <footer class="footer">
+        <p>© djnaumov 2016</p>
+    </footer>
+
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/tether/1.3.1/js/tether.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"
+        integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
+        crossorigin="anonymous"></script>
 </body>
 </html>
