--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+            <div class="text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
+                <div class="i-frame-wrapper">
+                    <iframe width="100%" height="180" frameborder="0"
+                            src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2Fdjnaumov%2F&hide_cover=1">
+                    </iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="footer">
         <p>© djnaumov 2016</p>
     </footer>
