uploaded first ng2 alpha version

--- a/index.html
+++ b/index.html
@@ -1,65 +1,24 @@
-﻿<!DOCTYPE html>
-
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <meta charset="utf-8"/>
+    <base href="https://djnaumov.github.io/podcasts/">
     <title>djnaumov (alpha)</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css"
-          integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
-    <link href="./public/main.css" type="text/css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta http-equiv="Content-Security-Policy"
+          content="default-src 'none';
+          font-src 'self';
+          img-src 'self' data: https: http: ;
+          style-src 'self' blob: 'unsafe-inline';
+          media-src 'self';
+          connect-src *;
+          script-src 'self' 'unsafe-inline' 'unsafe-eval' http://dl.metabar.ru;
+          child-src 'self' https://dl.metabar.ru;">
 </head>
 
-<body>
-
-
-<div class="container">
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <div class="text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                <div class="wrapper">
-                    <div class="loader">
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <dic class="text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                <p class="h1">The website is under construction...</p>
-            </dic>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-            <div class="text-xs-center text-sm-center text-md-center text-lg-center text-xl-center">
-                <div class="i-frame-wrapper">
-                    <iframe width="100%" height="180" frameborder="0"
-                            src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2Fdjnaumov%2F&hide_cover=1">
-                    </iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer class="footer">
-        <p>© djnaumov 2016</p>
-    </footer>
-
-</div>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/tether/1.3.1/js/tether.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"
-        integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK"
-        crossorigin="anonymous"></script>
-</body>
+<body class="main-page">
+<sg-app>Loading...</sg-app>
+<script type="text/javascript" src="bootstrap.8bfcce35f4aa2f90b17d.bundle.js"></script><script type="text/javascript" src="polyfills.f4566ac0aaca8a629ffb.bundle.js"></script><script type="text/javascript" src="vendor.9f1913beb1df47bc9a66.bundle.js"></script><script type="text/javascript" src="app.62d3d983898195a41af9.bundle.js"></script></body>
 </html>
