added mixcloud player

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           media-src 'self';
           connect-src *;
           script-src 'self' 'unsafe-inline' 'unsafe-eval' http://dl.metabar.ru;
-          child-src 'self' https://dl.metabar.ru;">
+          child-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com ;">
 </head>
 
 <body class="main-page">
 <sg-app>Loading...</sg-app>
-<script type="text/javascript" src="bootstrap.9bd29f159c48b6d89b4b.bundle.js"></script><script type="text/javascript" src="polyfills.f4566ac0aaca8a629ffb.bundle.js"></script><script type="text/javascript" src="vendor.9f1913beb1df47bc9a66.bundle.js"></script><script type="text/javascript" src="app.7d553d3959505021d75c.bundle.js"></script></body>
+<script type="text/javascript" src="bootstrap.cf0f508c3752a2f9d8f7.bundle.js"></script><script type="text/javascript" src="polyfills.39ea15e9dcb19023daea.bundle.js"></script><script type="text/javascript" src="vendor.9e05a858416ef90ae24a.bundle.js"></script><script type="text/javascript" src="app.c10fc1008545571470f0.bundle.js"></script></body>
 </html>
