--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           media-src 'self';
           connect-src *;
           script-src 'self' 'unsafe-inline' 'unsafe-eval' http://dl.metabar.ru;
-          child-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com ;">
+          frame-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com ;">
 </head>
 
 <body class="main-page">
