fixed bug with intl on iOS mobile devices. added image, meta tags.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html>
 
 <head>
-    <base href="https://djnaumov.github.io/podcasts/">
+    <base href="/">
     <title>djnaumov (alpha)</title>
+    <meta name="description" content="Podcasts and tracks by Vladimir Naumov.">
+    <meta name="keywords"
+          content="djanumov,vladimir,naumov,dj,podcast,podcasts,mix,mixes,track,tracks,ua,urk,ukraine,kh,kharkiv,kharkov,house,deep house,nu disco,future house">
+    <meta name="author" content="Vladimir Naumov, djnaumov">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@djnaumov">
+    <meta name="twitter:creator" content="@djnaumov">
+    <meta property="og:url" content="https://djnaumov.github.io/podcasts">
+    <meta property="og:title" content="Vladimir Naumov - Podcasts">
+    <meta property="og:description" content="Podcasts and tracks by Vladimir Naumov.">
+    <meta property="og:image:secure_url" content="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
+    <meta property="og:type" content="music">
+    <meta property="og:locale" content="en_GB">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -15,10 +28,11 @@
           media-src 'self';
           connect-src *;
           script-src 'self' 'unsafe-inline' 'unsafe-eval' http://dl.metabar.ru;
-          frame-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com ;">
+          frame-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com;">
+    <link rel="icon" type="image/jpeg" href="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
 </head>
 
 <body class="main-page">
 <sg-app>Loading...</sg-app>
-<script type="text/javascript" src="bootstrap.cf0f508c3752a2f9d8f7.bundle.js"></script><script type="text/javascript" src="polyfills.39ea15e9dcb19023daea.bundle.js"></script><script type="text/javascript" src="vendor.9e05a858416ef90ae24a.bundle.js"></script><script type="text/javascript" src="app.c10fc1008545571470f0.bundle.js"></script></body>
+<script type="text/javascript" src="bootstrap.89ad06eb1045c5c86c29.bundle.js"></script><script type="text/javascript" src="polyfills.3806527638c079e51eba.bundle.js"></script><script type="text/javascript" src="vendor.a8249f1cdd89f5d89369.bundle.js"></script><script type="text/javascript" src="app.99d9d40ecf8b646ca15e.bundle.js"></script></body>
 </html>
