--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta property="og:url" content="https://djnaumov.github.io/podcasts">
     <meta property="og:title" content="Vladimir Naumov - Podcasts">
     <meta property="og:description" content="Podcasts and tracks by Vladimir Naumov.">
+    <meta property="og:image" content="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
     <meta property="og:image:secure_url" content="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
     <meta property="og:type" content="music">
     <meta property="og:locale" content="en_GB">
