--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <base href="https://djnaumov.github.io/podcasts/">
+    <base href="./">
     <title>djnaumov (alpha)</title>
     <meta name="description" content="Podcasts and tracks by Vladimir Naumov.">
     <meta name="keywords"
@@ -14,7 +14,6 @@
     <meta property="og:url" content="https://djnaumov.github.io/podcasts">
     <meta property="og:title" content="Vladimir Naumov - Podcasts">
     <meta property="og:description" content="Podcasts and tracks by Vladimir Naumov.">
-    <meta property="og:image" content="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
     <meta property="og:image:secure_url" content="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
     <meta property="og:type" content="music">
     <meta property="og:locale" content="en_GB">
@@ -34,6 +33,26 @@
 </head>
 
 <body class="main-page">
-<sg-app>Loading...</sg-app>
-<script type="text/javascript" src="bootstrap.89ad06eb1045c5c86c29.bundle.js"></script><script type="text/javascript" src="polyfills.3806527638c079e51eba.bundle.js"></script><script type="text/javascript" src="vendor.a8249f1cdd89f5d89369.bundle.js"></script><script type="text/javascript" src="app.99d9d40ecf8b646ca15e.bundle.js"></script></body>
+
+<div class="main-content">
+    <cmp-app></cmp-app>
+</div>
+
+<div class="loading">
+    <div class="d-flex align-items-center h-100">
+        <div class="sk-cube-grid">
+            <div class="sk-cube sk-cube1"></div>
+            <div class="sk-cube sk-cube2"></div>
+            <div class="sk-cube sk-cube3"></div>
+            <div class="sk-cube sk-cube4"></div>
+            <div class="sk-cube sk-cube5"></div>
+            <div class="sk-cube sk-cube6"></div>
+            <div class="sk-cube sk-cube7"></div>
+            <div class="sk-cube sk-cube8"></div>
+            <div class="sk-cube sk-cube9"></div>
+        </div>
+    </div>
+</div>
+
+<script type="text/javascript" src="bootstrap.a0d4ec2cb47e62a703f4.bundle.js"></script><script type="text/javascript" src="polyfills.e6c740180b5c7167b7d9.bundle.js"></script><script type="text/javascript" src="vendor.ff773ae744c4090512ac.bundle.js"></script><script type="text/javascript" src="app.338712c6e9379e6900b7.bundle.js"></script><script type="text/javascript" src="fontawesome.a4be9cc78eff0885f593.bundle.js"></script></body>
 </html>
