--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <base href="./">
+    <base href="https://djnaumov.github.io/podcasts/">
     <title>djnaumov (alpha)</title>
     <meta name="description" content="Podcasts and tracks by Vladimir Naumov.">
     <meta name="keywords"
-          content="djanumov,vladimir,naumov,dj,podcast,podcasts,mix,mixes,track,tracks,ua,urk,ukraine,kh,kharkiv,kharkov,house,deep house,nu disco,future house">
+          content="djanumov, DJ Vladimir Naumov, Podcasts, Mixes, Tracks, Ukraine, Kharkov">
     <meta name="author" content="Vladimir Naumov, djnaumov">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@djnaumov">
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://djnaumov.github.io/podcasts">
     <meta property="og:title" content="Vladimir Naumov - Podcasts">
     <meta property="og:description" content="Podcasts and tracks by Vladimir Naumov.">
-    <meta property="og:image:secure_url" content="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
+    <meta property="og:image:secure_url" content="https://djnaumov.github.io/podcasts/images/i.jpg">
     <meta property="og:type" content="music">
     <meta property="og:locale" content="en_GB">
     <meta charset="utf-8">
@@ -29,30 +29,30 @@
           connect-src *;
           script-src 'self' 'unsafe-inline' 'unsafe-eval' http://dl.metabar.ru;
           frame-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com;">
-    <link rel="icon" type="image/jpeg" href="https://djnaumov.github.io/podcasts/asserts/images/i.jpg">
+    <link rel="icon" type="image/jpeg" href="images/i.jpg">
 </head>
 
 <body class="main-page">
 
 <div class="main-content">
-    <cmp-app></cmp-app>
-</div>
-
-<div class="loading">
-    <div class="d-flex align-items-center h-100">
-        <div class="sk-cube-grid">
-            <div class="sk-cube sk-cube1"></div>
-            <div class="sk-cube sk-cube2"></div>
-            <div class="sk-cube sk-cube3"></div>
-            <div class="sk-cube sk-cube4"></div>
-            <div class="sk-cube sk-cube5"></div>
-            <div class="sk-cube sk-cube6"></div>
-            <div class="sk-cube sk-cube7"></div>
-            <div class="sk-cube sk-cube8"></div>
-            <div class="sk-cube sk-cube9"></div>
+    <cmp-app>
+        <div class="loading">
+            <div class="d-flex align-items-center h-100">
+                <div class="sk-cube-grid">
+                    <div class="sk-cube sk-cube1"></div>
+                    <div class="sk-cube sk-cube2"></div>
+                    <div class="sk-cube sk-cube3"></div>
+                    <div class="sk-cube sk-cube4"></div>
+                    <div class="sk-cube sk-cube5"></div>
+                    <div class="sk-cube sk-cube6"></div>
+                    <div class="sk-cube sk-cube7"></div>
+                    <div class="sk-cube sk-cube8"></div>
+                    <div class="sk-cube sk-cube9"></div>
+                </div>
+            </div>
         </div>
-    </div>
+    </cmp-app>
 </div>
 
-<script type="text/javascript" src="bootstrap.70d62292def7b18d23a2.bundle.js"></script><script type="text/javascript" src="polyfills.e6c740180b5c7167b7d9.bundle.js"></script><script type="text/javascript" src="vendor.ff773ae744c4090512ac.bundle.js"></script><script type="text/javascript" src="app.461b217474fe8c7ed87c.bundle.js"></script><script type="text/javascript" src="fontawesome.a4be9cc78eff0885f593.bundle.js"></script></body>
+<script type="text/javascript" src="bootstrap.8d6ff6c2e6c0272485e0.bundle.js"></script><script type="text/javascript" src="polyfills.0312f5b512ff3f2bdaef.bundle.js"></script><script type="text/javascript" src="vendor.9d4179c469a1a20ab75d.bundle.js"></script><script type="text/javascript" src="app.e200f25d26171d7ea420.bundle.js"></script><script type="text/javascript" src="fontawesome.bc7b34fbf8bb3388a73e.bundle.js"></script></body>
 </html>
