was added videos page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           media-src 'self';
           connect-src *;
           script-src 'self' 'unsafe-inline' 'unsafe-eval' http://dl.metabar.ru;
-          frame-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com;">
+          frame-src 'self' https://dl.metabar.ru https://www.mixcloud.com https://www.google.com https://www.youtube.com;">
     <link rel="icon" type="image/jpeg" href="images/i.jpg">
 </head>
 
@@ -54,5 +54,5 @@
     </cmp-app>
 </div>
 
-<script type="text/javascript" src="bootstrap.8d6ff6c2e6c0272485e0.bundle.js"></script><script type="text/javascript" src="polyfills.0312f5b512ff3f2bdaef.bundle.js"></script><script type="text/javascript" src="vendor.9d4179c469a1a20ab75d.bundle.js"></script><script type="text/javascript" src="app.e200f25d26171d7ea420.bundle.js"></script><script type="text/javascript" src="fontawesome.bc7b34fbf8bb3388a73e.bundle.js"></script></body>
+<script type="text/javascript" src="bootstrap.d76ddb00d6a07ca30768.bundle.js"></script><script type="text/javascript" src="polyfills.eb4095f911d98d730905.bundle.js"></script><script type="text/javascript" src="vendor.d3280d1c8aa2d2e5d086.bundle.js"></script><script type="text/javascript" src="app.388e554cac13b5f7eec4.bundle.js"></script><script type="text/javascript" src="fontawesome.a806592b1779ffb6a2e1.bundle.js"></script></body>
 </html>
