--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
     <script>
       sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='https://djnaumov.github.io/test'"></meta>  
+    <meta http-equiv="refresh" content="0;URL='https://djnaumov.github.io/podcasts'"></meta>  
   </head>
   <body>
       <script>
