was updated to angular 4.3.0 was added hash startegy for routing.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <base href="https://djnaumov.github.io/podcasts/">
+    <base href="">
     <title>djnaumov (alpha)</title>
     <meta name="description" content="Podcasts and tracks by Vladimir Naumov.">
     <meta name="keywords"
@@ -54,5 +54,5 @@
     </cmp-app>
 </div>
 
-<script type="text/javascript" src="bootstrap.d76ddb00d6a07ca30768.bundle.js"></script><script type="text/javascript" src="polyfills.eb4095f911d98d730905.bundle.js"></script><script type="text/javascript" src="vendor.d3280d1c8aa2d2e5d086.bundle.js"></script><script type="text/javascript" src="app.388e554cac13b5f7eec4.bundle.js"></script><script type="text/javascript" src="fontawesome.a806592b1779ffb6a2e1.bundle.js"></script></body>
+<script type="text/javascript" src="bootstrap.fa13e9dfe42e8755f68f.bundle.js"></script><script type="text/javascript" src="polyfills.b290d65b355091983ea1.bundle.js"></script><script type="text/javascript" src="vendor.c4688ebec215df1f5dc3.bundle.js"></script><script type="text/javascript" src="app.e8ee1e20d0da19c26b3d.bundle.js"></script><script type="text/javascript" src="fontawesome.8d6f30edbffeeddcd7ad.bundle.js"></script></body>
 </html>
