was updated to 0.0.1-beta

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <base href="">
-    <title>djnaumov (alpha)</title>
+    <title>djnaumov (beta)</title>
     <meta name="description" content="Podcasts and tracks by Vladimir Naumov.">
-    <meta name="keywords"
-          content="djanumov, DJ Vladimir Naumov, Podcasts, Mixes, Tracks, Ukraine, Kharkov">
+    <meta name="keywords" content="djanumov, DJ Vladimir Naumov, Podcasts, Mixes, Tracks, Ukraine, Kharkov">
     <meta name="author" content="Vladimir Naumov, djnaumov">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@djnaumov">
@@ -20,8 +19,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta http-equiv="Content-Security-Policy"
-          content="default-src 'none';
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none';
           font-src 'self';
           img-src 'self' data: https: http: ;
           style-src 'self' blob: 'unsafe-inline';
@@ -34,25 +32,26 @@
 
 <body class="main-page">
 
-<div class="main-content">
-    <cmp-app>
-        <div class="loading">
-            <div class="d-flex align-items-center h-100">
-                <div class="sk-cube-grid">
-                    <div class="sk-cube sk-cube1"></div>
-                    <div class="sk-cube sk-cube2"></div>
-                    <div class="sk-cube sk-cube3"></div>
-                    <div class="sk-cube sk-cube4"></div>
-                    <div class="sk-cube sk-cube5"></div>
-                    <div class="sk-cube sk-cube6"></div>
-                    <div class="sk-cube sk-cube7"></div>
-                    <div class="sk-cube sk-cube8"></div>
-                    <div class="sk-cube sk-cube9"></div>
+    <div class="main-content">
+        <cmp-app>
+            <div class="loading">
+                <div class="d-flex align-items-center h-100">
+                    <div class="sk-cube-grid">
+                        <div class="sk-cube sk-cube1"></div>
+                        <div class="sk-cube sk-cube2"></div>
+                        <div class="sk-cube sk-cube3"></div>
+                        <div class="sk-cube sk-cube4"></div>
+                        <div class="sk-cube sk-cube5"></div>
+                        <div class="sk-cube sk-cube6"></div>
+                        <div class="sk-cube sk-cube7"></div>
+                        <div class="sk-cube sk-cube8"></div>
+                        <div class="sk-cube sk-cube9"></div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </cmp-app>
-</div>
+        </cmp-app>
+    </div>
 
-<script type="text/javascript" src="bootstrap.fa13e9dfe42e8755f68f.bundle.js"></script><script type="text/javascript" src="polyfills.b290d65b355091983ea1.bundle.js"></script><script type="text/javascript" src="vendor.c4688ebec215df1f5dc3.bundle.js"></script><script type="text/javascript" src="app.e8ee1e20d0da19c26b3d.bundle.js"></script><script type="text/javascript" src="fontawesome.8d6f30edbffeeddcd7ad.bundle.js"></script></body>
+<script type="text/javascript" src="polyfills.c096e15589832612c4d7.bundle.js"></script><script type="text/javascript" src="fontawesome.86f3bf777cb1e1d6cf06.bundle.js"></script><script type="text/javascript" src="bootstrap.25d1ae9550bcab49d41f.bundle.js"></script><script type="text/javascript" src="vendor.840e808735c411bf5aab.bundle.js"></script><script type="text/javascript" src="app.2cb3daff7faa3ba2f704.bundle.js"></script></body>
+
 </html>
